practice/pc-hpa-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  strategy: 
    type: RollingUpdate # 滾動更新策略
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.1
        resources:
          limits:  # 限制資源（上限）
            cpu: "1" 
          requests: # 請求資源（下限）
            cpu: "100m"
